--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,12 @@ body {
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+[data-theme='dark'],
+[data-theme='dark'] body {
+  color: #fff;
+  background: black;
+}
+
 a {
   color: #0070f3;
   text-decoration: none;
